changed the test unit -  version 3.8.89 (1009)

--- a/Example/ApesterKit/Base.lproj/Main.storyboard
+++ b/Example/ApesterKit/Base.lproj/Main.storyboard
@@ -203,7 +203,7 @@
             <objects>
                 <tableViewController storyboardIdentifier="navigationButtons" id="LMb-PD-XyA" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="insetGrouped" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" sectionFooterHeight="18" id="Ckd-Cj-vZS">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="647"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <sections>
                             <tableViewSection headerTitle="UnitView" id="etc-aD-ehd">
@@ -307,18 +307,41 @@
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tek-Bs-4dW">
                                         <rect key="frame" x="0.0" y="16" width="393" height="1188"/>
                                         <subviews>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="FyC-4s-qIP">
+                                                <rect key="frame" x="0.0" y="14" width="393" height="550"/>
+                                                <color key="backgroundColor" red="0.61623930930000004" green="0.61429256200000004" blue="0.70197159050000002" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="550" id="OVp-nk-UYB"/>
+                                                </constraints>
+                                            </view>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="bottom artilce" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="5vJ-fu-FJK">
+                                                <rect key="frame" x="16" y="564" width="361" height="20.5"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="0.51253352891530424" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <nil key="highlightedColor"/>
+                                                <size key="shadowOffset" width="0.0" height="0.0"/>
+                                            </label>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Mcp-CC-2tc">
+                                                <rect key="frame" x="80" y="608.5" width="233" height="34.5"/>
+                                                <size key="titleShadowOffset" width="0.0" height="10"/>
+                                                <state key="normal" title="Button"/>
+                                                <buttonConfiguration key="configuration" style="plain" title="Apester web"/>
+                                                <connections>
+                                                    <action selector="openLinkToApesterWeb:" destination="qqy-7d-rj5" eventType="touchUpInside" id="BdT-6L-5t4"/>
+                                                </connections>
+                                            </button>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="cjx-tO-0RJ">
-                                                <rect key="frame" x="8" y="16" width="377" height="16"/>
+                                                <rect key="frame" x="8" y="-8" width="377" height="16"/>
                                                 <subviews>
-                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="1" text="" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" adjustsFontForContentSizeCategory="YES" id="OC9-7H-HfH">
-                                                        <rect key="frame" x="188.5" y="0.0" width="0.0" height="4"/>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="1" text="Title" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" adjustsFontForContentSizeCategory="YES" id="OC9-7H-HfH">
+                                                        <rect key="frame" x="164" y="0.0" width="49" height="8"/>
                                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="24"/>
                                                         <nil key="textColor"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" restorationIdentifier="article1" text="" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" sizingRule="oversize" translatesAutoresizingMaskIntoConstraints="NO" id="ott-qq-eDa">
-                                                        <rect key="frame" x="8" y="12" width="361" height="4"/>
+                                                        <rect key="frame" x="8" y="16" width="361" height="0.0"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                         <color key="textColor" red="0.070467097020351865" green="0.073949100995304606" blue="0.058035374474313298" alpha="0.76141690892099545" colorSpace="custom" customColorSpace="sRGB"/>
                                                         <nil key="highlightedColor"/>
@@ -330,31 +353,8 @@
                                                     <constraint firstAttribute="trailing" secondItem="ott-qq-eDa" secondAttribute="trailing" constant="8" id="MjB-qG-5Ti"/>
                                                 </constraints>
                                             </stackView>
-                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="FyC-4s-qIP">
-                                                <rect key="frame" x="0.0" y="34" width="393" height="550"/>
-                                                <color key="backgroundColor" red="0.61623930930000004" green="0.61429256200000004" blue="0.70197159050000002" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                                                <constraints>
-                                                    <constraint firstAttribute="height" constant="550" id="OVp-nk-UYB"/>
-                                                </constraints>
-                                            </view>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="bottom artilce" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="5vJ-fu-FJK">
-                                                <rect key="frame" x="16" y="584" width="361" height="20.5"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="0.51253352891530424" colorSpace="custom" customColorSpace="sRGB"/>
-                                                <nil key="highlightedColor"/>
-                                                <size key="shadowOffset" width="0.0" height="0.0"/>
-                                            </label>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Mcp-CC-2tc">
-                                                <rect key="frame" x="80" y="628.5" width="233" height="34.5"/>
-                                                <size key="titleShadowOffset" width="0.0" height="10"/>
-                                                <state key="normal" title="Button"/>
-                                                <buttonConfiguration key="configuration" style="plain" title="Apester web"/>
-                                                <connections>
-                                                    <action selector="openLinkToApesterWeb:" destination="qqy-7d-rj5" eventType="touchUpInside" id="BdT-6L-5t4"/>
-                                                </connections>
-                                            </button>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="heart" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="8g3-Xd-FwA">
-                                                <rect key="frame" x="315" y="33.5" width="82" height="62.5"/>
+                                                <rect key="frame" x="315" y="13.5" width="82" height="62.5"/>
                                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="82" id="Dww-FI-Jbh"/>
@@ -371,10 +371,9 @@
                                             <constraint firstAttribute="trailing" secondItem="cjx-tO-0RJ" secondAttribute="trailing" constant="8" id="Ps3-mk-wYs"/>
                                             <constraint firstItem="Mcp-CC-2tc" firstAttribute="leading" secondItem="tek-Bs-4dW" secondAttribute="leading" constant="80" id="QSG-8F-wi9"/>
                                             <constraint firstItem="cjx-tO-0RJ" firstAttribute="leading" secondItem="tek-Bs-4dW" secondAttribute="leading" constant="8" id="QiG-81-BOC"/>
-                                            <constraint firstItem="cjx-tO-0RJ" firstAttribute="top" secondItem="tek-Bs-4dW" secondAttribute="top" constant="16" id="RRk-zP-Wfv"/>
                                             <constraint firstItem="5vJ-fu-FJK" firstAttribute="leading" secondItem="tek-Bs-4dW" secondAttribute="leading" constant="16" id="UXt-KZ-coH"/>
+                                            <constraint firstItem="8g3-Xd-FwA" firstAttribute="top" secondItem="cjx-tO-0RJ" secondAttribute="bottom" constant="4" id="cD7-ZI-wxk"/>
                                             <constraint firstItem="Mcp-CC-2tc" firstAttribute="top" secondItem="5vJ-fu-FJK" secondAttribute="bottom" constant="24" id="dq4-qr-8Q6"/>
-                                            <constraint firstItem="8g3-Xd-FwA" firstAttribute="top" secondItem="ott-qq-eDa" secondAttribute="bottom" id="gys-Jk-kbm"/>
                                             <constraint firstItem="5vJ-fu-FJK" firstAttribute="top" secondItem="FyC-4s-qIP" secondAttribute="bottom" id="rwo-gz-UTL"/>
                                             <constraint firstAttribute="trailing" secondItem="Mcp-CC-2tc" secondAttribute="trailing" constant="80" id="vwP-0x-nkB"/>
                                             <constraint firstAttribute="trailing" secondItem="FyC-4s-qIP" secondAttribute="trailing" id="xSa-sy-ezT"/>
@@ -388,6 +387,7 @@
                                     <constraint firstItem="tek-Bs-4dW" firstAttribute="leading" secondItem="if5-L9-wx1" secondAttribute="leading" id="IHa-DB-xJF"/>
                                     <constraint firstAttribute="height" constant="660" id="RaT-Ml-O3h"/>
                                     <constraint firstItem="tek-Bs-4dW" firstAttribute="height" secondItem="if5-L9-wx1" secondAttribute="height" multiplier="1.8" id="ZcT-Mj-LQ2"/>
+                                    <constraint firstItem="cjx-tO-0RJ" firstAttribute="top" secondItem="if5-L9-wx1" secondAttribute="top" constant="8" id="d5h-FX-bqo"/>
                                     <constraint firstAttribute="trailing" secondItem="tek-Bs-4dW" secondAttribute="trailing" id="zBN-lJ-asX"/>
                                 </constraints>
                             </scrollView>
@@ -432,7 +432,7 @@
                                 </constraints>
                             </stackView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Lzn-pE-xxH">
-                                <rect key="frame" x="159" y="813" width="59.5" height="34.5"/>
+                                <rect key="frame" x="159" y="777" width="59.5" height="34.5"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="Next"/>
                                 <connections>
@@ -625,11 +625,11 @@
                         <viewControllerLayoutGuide type="bottom" id="Gca-sA-sIu"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="SZy-8Q-sQf">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="647"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="ufo-c7-YmU">
-                                <rect key="frame" x="20" y="5" width="335" height="622"/>
+                                <rect key="frame" x="20" y="69" width="335" height="578"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="JPn-e1-hO1">
                                     <size key="itemSize" width="375" height="200"/>
@@ -699,11 +699,11 @@
                         <viewControllerLayoutGuide type="bottom" id="VBD-gN-7hp"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="siT-9e-Nu7">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="647"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VgY-aI-Drh">
-                                <rect key="frame" x="10" y="10" width="355" height="578"/>
+                                <rect key="frame" x="10" y="74" width="355" height="534"/>
                                 <rect key="contentStretch" x="0.0" y="0.0" width="0.0" height="0.0"/>
                             </view>
                         </subviews>
@@ -752,7 +752,7 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="jWe-Ug-vcU"/>
+        <segue reference="LTW-eZ-WmY"/>
         <segue reference="enh-BY-NPh"/>
     </inferredMetricsTieBreakers>
     <resources>
